<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/appointment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/reservedAppointment"
            android:textColor="?android:textColorSecondary"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/appointment"
            android:padding="8dp"
            android:text="@string/appointment_date_placeholder"
            android:textSize="20sp"/>

        <LinearLayout
            android:id="@+id/created_at_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/date"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/created_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/created_at" />

            <TextView
                android:id="@+id/created_at_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/appointment_date_placeholder" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/updated_at_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/created_at_section"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/updated_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/updated_at" />

            <TextView
                android:id="@+id/updated_at_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/appointment_date_placeholder" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/updated_at_section"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/update_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/update" />

            <Button
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/delete" />
        </LinearLayout>


    </RelativeLayout>
</androidx.cardview.widget.CardView>
