<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateAppointmentActivity">

    <TextView
        android:id="@+id/createNewAppointment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_appointment"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_marginTop="50dp" />

    <EditText
        android:id="@+id/AppointmentDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="82dp" />

    <Button
        android:id="@+id/appointmentDateSelector"
        android:text="@string/pick_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/confirm_button"
        android:text="@string/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:onClick="showAppointments"/>

</LinearLayout>